--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-first-app",
+  "homepage": "https://prof-tejera.github.io/homework-2-HeruRubinKDRP-1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
